[gd_scene load_steps=5 format=2]

[ext_resource path="res://staticobjects/Fort/Fort.gd" type="Script" id=1]
[ext_resource path="res://staticobjects/Fort/Tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://staticobjects/Fort/FortWallH.tscn" type="PackedScene" id=3]
[ext_resource path="res://pickups/Flag.tscn" type="PackedScene" id=4]

[node name="Fort" type="StaticBody2D"]
collision_layer = 128
collision_mask = 0
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -24, -24 )
rect = Rect2( 24, 24, 186, 157 )

[node name="SizeMarker" type="Position2D" parent="."]
position = Vector2( 186, 157 )

[node name="FortWallH" parent="." instance=ExtResource( 3 )]
position = Vector2( 63, 24 )

[node name="FortWallH2" parent="." instance=ExtResource( 3 )]
position = Vector2( 93, 24 )

[node name="FortWallH3" parent="." instance=ExtResource( 3 )]
position = Vector2( 123, 24 )

[node name="FortWallH4" parent="." instance=ExtResource( 3 )]
position = Vector2( 162, 63 )

[node name="FortWallH5" parent="." instance=ExtResource( 3 )]
position = Vector2( 162, 93 )

[node name="FortWallH6" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, 63 )

[node name="FortWallH7" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, 93 )

[node name="FortWallH8" parent="." instance=ExtResource( 3 )]
position = Vector2( 63, 132 )

[node name="FortWallH9" parent="." instance=ExtResource( 3 )]
position = Vector2( 93, 132 )

[node name="FortWallH10" parent="." instance=ExtResource( 3 )]
position = Vector2( 123, 132 )

[node name="Tower1" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, 24 )
z_index = 1

[node name="Tower2" parent="." instance=ExtResource( 2 )]
position = Vector2( 162, 24 )
z_index = 1

[node name="Tower3" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, 132 )
z_index = 1

[node name="Tower4" parent="." instance=ExtResource( 2 )]
position = Vector2( 162, 132 )
z_index = 1

[node name="Flag" parent="." instance=ExtResource( 4 )]
position = Vector2( 93, 78 )
z_index = 1

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="clicked" from="FortWallH" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH2" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH3" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH4" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH5" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH6" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH7" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH8" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH9" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="FortWallH10" to="." method="_on_Body_clicked"]
[connection signal="clicked" from="Tower1" to="." method="_on_Body_clicked"]
[connection signal="dead" from="Tower1" to="." method="body_dead"]
[connection signal="shoot" from="Tower1" to="." method="_on_Tower_shoot"]
[connection signal="clicked" from="Tower2" to="." method="_on_Body_clicked"]
[connection signal="dead" from="Tower2" to="." method="body_dead"]
[connection signal="shoot" from="Tower2" to="." method="_on_Tower_shoot"]
[connection signal="clicked" from="Tower3" to="." method="_on_Body_clicked"]
[connection signal="dead" from="Tower3" to="." method="body_dead"]
[connection signal="shoot" from="Tower3" to="." method="_on_Tower_shoot"]
[connection signal="clicked" from="Tower4" to="." method="_on_Body_clicked"]
[connection signal="dead" from="Tower4" to="." method="body_dead"]
[connection signal="shoot" from="Tower4" to="." method="_on_Tower_shoot"]
